Update CMakeLists.txt for compilation on linux (missing the dl library)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,6 @@
 cmake_minimum_required (VERSION 2.8)
 project (REFPROP)
 add_executable(Main main.cpp other.cpp)
+if(UNIX)
+    target_link_libraries(Main dl)
+endif()
